Fix website going off screen for 320px screen
Change Project section to be a min of 250px
Change footer paragraph to take up 80vw at most

--- a/src/style.css
+++ b/src/style.css
@@ -21,20 +21,20 @@ body {
 h1, h2, h3{
   font-family: Playfair Display,serif;
   font-weight: 400;
-  margin-bottom: 1rem;
 }
 
 h2 {
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  margin: 1rem 0rem;
 }
-main {
+main, .about {
   padding: 2vh 8vw;
   box-sizing: border-box;
 }
 
 /* Header */
-header {
+header > div:first-child {
   padding: 8vw 8vw;
   box-sizing: border-box;
   background: linear-gradient(145deg, var(--bg-color) 50%, white 50%);
@@ -53,11 +53,12 @@ h1 {
   position: absolute;
   top: 100%;
   left: 50%;
-  transform: translate(-50%,-100%);
+  transform: translate(-50%,-125%);
   color: white;
   min-width: min-content;
   text-shadow: 5px 5px 10px rgb(15, 15, 15);
-  font-size: 5rem;
+  font-size: 14vw;
+  letter-spacing: 0.2rem;
 }
 
 /* About Me */
@@ -80,9 +81,10 @@ h1 {
 .project-img img {
   display: none;
 }
+
 .work article h3 {
   display: inline-block;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 500;
   margin-left: 1rem;
   margin-bottom: 0.5rem;
@@ -100,7 +102,7 @@ h1 {
 
 .work > div{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
 }
 
@@ -120,14 +122,10 @@ h1 {
   left: 50%;
   transform: translate(-60%,-60%);
   color: white;
-  font-size: 2.5rem;
+  font-size: 2rem;
   letter-spacing: 0.1rem;
   font-family: Playfair Display;
   font-weight: 500;
-}
-
-.about, .work {
-  margin-top: 2rem;
 }
 
 /* Footer */
@@ -142,16 +140,17 @@ footer {
   align-items: start;
 }
 
-.contact > address, .contact > address > div {
+.contact > address > div {
   margin: 2rem 0rem;
 }
 
 .contact {
-  padding: 1rem 8vw;
+  margin-left: 8vw;
 }
 
 footer > section > p {
   font-size: 1.2rem;
+  width: min(100%,80vw);
 }
 
 
@@ -162,14 +161,11 @@ footer img{
   object-position: 50% 30%;
 }
 
-.contact address > div:nth-child(2) {
-  transform: translateX(0px);
-}
 
 .contact address div:nth-child(2) img {
+  display: none;
   width: 1rem;
   height: 1rem;
-  margin-right: 0.5rem;
 }
  
 address > div:last-child {
@@ -179,6 +175,20 @@ address > div:last-child {
 
 
 @media screen and (min-width: 480px) {
+  /* Header */
+  header img {
+    width: 40vw;
+    height: 60vw;
+    object-fit: cover;
+  }
+
+  header h1{
+    top: 0%;
+    left: 50%;
+    transform: translate(-1.5%,0%);
+  }
+
+  /* Footer */
   footer h2 {
     text-align: start;
   }
@@ -194,5 +204,9 @@ address > div:last-child {
     height: auto;
     margin: 2rem 0;
     margin: auto 0;
+  }
+
+  .contact address div:nth-child(2) img {
+    visibility: visible;
   }
 }
